--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,9 @@ http {
         listen 80;
         listen [::]:80;
 
-        root /var/www/html;
+        # MUDANÇA: Apontando para a pasta dedicada do Moodle
+        root /var/www/moodle;
+
         index index.php index.html index.htm;
 
         server_name _;
@@ -43,12 +45,11 @@ http {
             fastcgi_param PATH_INFO $fastcgi_path_info;
         }
 
-        # Bloqueia acesso a arquivos sensíveis e git
+        # Bloqueios de segurança
         location ~ (/\.git|/config.php|/composer.lock|/composer.json) {
             deny all;
         }
 
-        # Proteção para o dataroot (caso alguém mapeie errado, embora o dataroot deva estar fora)
         location /moodledata {
             deny all;
             return 404;
