--- a/oneclick.yml
+++ b/oneclick.yml
@@ -1,35 +1,39 @@
 captainVersion: 4
 
 services:
-  # Banco interno (somente se o usuário NÃO usar DB externo)
+  # -------------------------------------------------------------------------
+  # Banco de Dados Interno (PostgreSQL)
+  # -------------------------------------------------------------------------
   $$cap_appname-db:
     image: postgres:14-alpine
+    deploy:
+      replicas: $$cap_db_replicas
     environment:
       POSTGRES_USER: moodle
-      POSTGRES_PASSWORD: $$cap_db_password
+      POSTGRES_PASSWORD: $$cap_db_pass
       POSTGRES_DB: moodle
     volumes:
       - $$cap_appname-db-data:/var/lib/postgresql/data
     caproverExtra:
       notExposeAsWebApp: 'true'
-    # "Desativa" o container se o usuário escolher DB externo
-    # (CapRover simplesmente ignora porque os envs abaixo não serão válidos)
-    <<: $$cap_internal_db_enabled
 
+  # -------------------------------------------------------------------------
+  # Aplicação Moodle
+  # -------------------------------------------------------------------------
   $$cap_appname:
-    depends_on:
-      - $$cap_appname-db
     image: $$cap_docker_image
     restart: always
     environment:
       MOODLE_URL: $$cap_moodle_url
 
-      DB_HOST: $$cap_effective_db_host
-      DB_PORT: $$cap_effective_db_port
-      DB_TYPE: pgsql
-      DB_NAME: moodle
-      DB_USER: moodle
-      DB_PASS: $$cap_db_password
+      # Variáveis de Conexão
+      DB_HOST: $$cap_db_host
+      DB_PORT: $$cap_db_port
+      DB_TYPE: $$cap_db_type
+      DB_NAME: $$cap_db_name
+      DB_USER: $$cap_db_user
+      DB_PASS: $$cap_db_pass
+      DB_PREFIX: $$cap_db_prefix
 
       MOODLE_ADMIN_USER: $$cap_md_admin_user
       MOODLE_ADMIN_PASS: $$cap_md_admin_pass
@@ -44,6 +48,8 @@ services:
       PHP_MAX_INPUT_VARS: $$cap_php_input_vars
 
       MOODLE_VERSION: $$cap_moodle_version
+
+      # AQUI ESTÁ ELA: Injeção da lista de plugins como variável de ambiente
       MOODLE_PLUGINS_JSON: '$$cap_moodle_plugins_json'
 
     volumes:
@@ -55,68 +61,77 @@ caproverOneClickApp:
   variables:
     - id: $$cap_docker_image
       label: Docker Image
-      defaultValue: esdrascaleb/moodle-docker-php-production:php8.1
+      description: Your custom image from Docker Hub.
+      defaultValue: esdrascaleb/moodle-docker-php-production:php8.3
 
     - id: $$cap_moodle_url
       label: Moodle URL
+      description: Public URL (https://...).
       defaultValue: https://moodle.example.com
 
+    # =================================================================
+    # BANCO DE DADOS (Lógica de Réplicas)
+    # =================================================================
     - id: $$cap_use_external_db
-      label: Use external database?
-      description: yes = use host/port/user/pass | no = create local PostgreSQL
+      label: Use External Database?
+      description: "'no' = Creates a local DB container. 'yes' = You must provide external DB details below."
       defaultValue: 'no'
       validRegex: /^(yes|no)$/
 
-    # ===== Banco EXTERNO =====
-    - id: $$cap_external_db_host
-      label: External DB Host
-      validIf:
-        condition: $$cap_use_external_db
-        equals: 'yes'
-      defaultValue: ''
-    - id: $$cap_external_db_port
-      label: External DB Port
-      validIf:
-        condition: $$cap_use_external_db
-        equals: 'yes'
-      defaultValue: '5432'
-
-    # ===== Banco INTERNO =====
-    - id: $$cap_internal_db_enabled
-      label: INTERNAL FLAG – DO NOT TOUCH
-      description: Used internally to enable/disable DB container (CapRover trick)
-      defaultValue: |
-        {}
+    - id: $$cap_db_replicas
+      label: DB Container Status (Auto)
+      description: 1 = Running, 0 = Stopped (External DB mode)
+      defaultValue: '1'
       validIf:
         condition: $$cap_use_external_db
         equals: 'no'
 
-    - id: $$cap_effective_db_host
-      label: INTERNAL DB HOST SWITCH
+    - id: $$cap_db_replicas
+      label: DB Container Status (Auto)
+      description: 1 = Running, 0 = Stopped (External DB mode)
+      defaultValue: '0'
+      validIf:
+        condition: $$cap_use_external_db
+        equals: 'yes'
+
+    # --- CAMPOS DE CONEXÃO ---
+    - id: $$cap_db_host
+      label: Database Host
+      description: Leave default for Internal DB. Change only if using External DB.
       defaultValue: srv-captain--$$cap_appname-db
-      validIf:
-        condition: $$cap_use_external_db
-        equals: 'no'
 
-    - id: $$cap_effective_db_host
-      label: EXTERNAL DB HOST SWITCH
-      defaultValue: $$cap_external_db_host
-      validIf:
-        condition: $$cap_use_external_db
-        equals: 'yes'
-
-    - id: $$cap_effective_db_port
-      label: INTERNAL DB PORT SWITCH
+    - id: $$cap_db_port
+      label: Database Port
       defaultValue: '5432'
-      validIf:
-        condition: $$cap_use_external_db
-        equals: 'no'
 
-    - id: $$cap_effective_db_port
-      label: EXTERNAL DB PORT SWITCH
-      defaultValue: $$cap_external_db_port
-      validIf:
-        condition: $$cap_use_external_db
+    - id: $$cap_db_name
+      label: Database Name
+      defaultValue: 'moodle'
+
+    - id: $$cap_db_user
+      label: Database User
+      defaultValue: 'moodle'
+
+    - id: $$cap_db_pass
+      label: Database Password
+      description: Auto-generated for Internal. Overwrite if using External.
+      defaultValue: $$cap_gen_random_hex(16)
+
+    - id: $$cap_db_type
+      label: Database Type
+      description: "'pgsql' (Recommended) or 'mysqli'"
+      defaultValue: 'pgsql'
+
+    - id: $$cap_db_prefix
+      label: DB Prefix
+      defaultValue: 'mdl_'
+
+    # =================================================================
+    # CONFIGURAÇÕES DO MOODLE
+    # =================================================================
+    - id: $$cap_moodle_version
+      label: Moodle Version (Branch/Tag)
+      defaultValue: MOODLE_405_STABLE
 
     - id: $$cap_md_admin_user
       label: Moodle Admin User
@@ -130,59 +145,47 @@ caproverOneClickApp:
       label: Moodle Admin Email
       defaultValue: admin@example.com
 
-    # ===== PHP extra =====
+    - id: $$cap_moodle_plugins_json
+      label: Plugins JSON
+      description: 'JSON List. Example: [{"giturl":"...","branch":"...","installpath":"..."}]'
+      defaultValue: '[]'
+
+    # =================================================================
+    # PHP & PERFORMANCE
+    # =================================================================
     - id: $$cap_extra_php
-      label: Extra PHP
+      label: Extra PHP Config
       defaultValue: '$CFG->sslproxy = 1;'
 
     - id: $$cap_php_memory_limit
       label: PHP Memory Limit
-      description: Max memory per script (default 512M)
       defaultValue: 512M
 
     - id: $$cap_php_upload_max
       label: PHP Upload Max Filesize
-      description: Max file upload size
       defaultValue: 100M
 
     - id: $$cap_php_post_max
       label: PHP POST Max Size
-      description: Must be >= upload size
       defaultValue: 100M
 
     - id: $$cap_php_max_exec
       label: PHP Max Execution Time
-      description: Timeout in seconds
       defaultValue: '600'
 
     - id: $$cap_php_input_vars
       label: PHP Max Input Vars
-      description: Increase for large forms (gradebook etc.)
       defaultValue: '5000'
-
-    # ===== DB =====
-
-    - id: $$cap_db_password
-      label: Local DB Password
-      defaultValue: $$cap_gen_random_hex(16)
-
-    - id: $$cap_moodle_version
-      label: Moodle Version (Branch)
-      description: 'Branch or tag from Moodle Git. Example: MOODLE_405_STABLE'
-      defaultValue: MOODLE_405_STABLE
-
-    - id: $$cap_moodle_plugins_json
-      label: Moodle Plugins JSON
-      description: 'JSON array of plugins to install via Git. Example: [{"giturl":"...","branch":...,"installpath":"..."}]'
-      defaultValue: '[]'
 
   instructions:
     start: >
-      Moodle Deploy (Custom Image + optional external DB)
-
+      Moodle Deploy with Custom Docker Image.
+      Supports Internal PostgreSQL (default) or External Database.
     end: >
-      Done! Enable HTTPS after deploy.
+      Deploy Finished!
+      1. Enable HTTPS in App Config.
+      2. If using External DB, ensure connectivity.
 
-  displayName: Moodle Production (Custom Image)
+  displayName: Moodle Production (Full Custom)
   isOfficial: false
-  description: Moodle ready for CapRover, with optional external database.
+  description: Moodle with full External DB support and PHP tuning.
